--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Google Tag Manager -->
     <script>
-      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtag.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-NCXDR48C');
+      (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-NCXDR48C');
     </script>
     <!-- End Google Tag Manager -->
 
@@ -34,8 +34,13 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://snack.wine/" />
     
-    <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="/src/assets/favicon-48x48.png" />
+    <link rel="icon" type="image/png" sizes="64x64" href="/src/assets/favicon-64x64.png" />
+    <link rel="icon" type="image/png" sizes="128x128" href="/src/assets/favicon-128x128.png" />
+    <link rel="apple-touch-icon" href="/src/assets/favicon-256x256.png" />
     
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -44,7 +49,7 @@
       "@type": "Organization",
       "name": "Snack Wine",
       "url": "https://snack.wine",
-      "logo": "https://snack.wine/logo.png",
+      "logo": "https://snack.wine/src/assets/favicon-256x256.png",
       "description": "Snack Wine makes premium, low-ABV wine spritzers designed for everyday enjoyment. Portable, refreshing, and thoughtfully made.",
       "sameAs": [
         "https://instagram.com/snackwines"
