Big update.  New Logo, mockups, site pages and copy

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary Meta Tags -->
-    <title>Snack Wine - Premium Low-ABV Wine Spritzers | Coming Soon</title>
-    <meta name="description" content="Snack Wine makes premium, low-ABV wine spritzers designed for everyday enjoyment. Portable, refreshing, and thoughtfully made. Join our waitlist." />
+    <title>Snack Wine | Canned wine spritzers, made in Portland</title>
+    <meta name="description" content="Snack Wine makes canned wine spritzers from a Fresno County vineyard, made in Portland. Launching soon — join the waitlist." />
     <meta name="keywords" content="wine spritzers, low ABV wine, canned wine spritzers, sparkling wine drinks, portable wine" />
     <meta name="author" content="Snack Wine" />
     
@@ -93,7 +93,9 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NCXDR48C" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-    <div id="root"></div>
+    <div id="frame">
+      <div id="root"></div>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
