--- a/index.html
+++ b/index.html
@@ -35,12 +35,10 @@
     <link rel="canonical" href="https://snack.wine/" />
     
     <!-- Favicons -->
-    <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/favicon-16x16.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="48x48" href="/src/assets/favicon-48x48.png" />
-    <link rel="icon" type="image/png" sizes="64x64" href="/src/assets/favicon-64x64.png" />
-    <link rel="icon" type="image/png" sizes="128x128" href="/src/assets/favicon-128x128.png" />
-    <link rel="apple-touch-icon" href="/src/assets/favicon-256x256.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/src/assets/favicon-96x96.png" />
+    <link rel="apple-touch-icon" href="/src/assets/apple-touch-icon.png" />
+    <link rel="manifest" href="/src/assets/site.webmanifest" />
     
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
